horizontal scroll fixed, menu fixed, forth section layout is ready

--- a/src/styles/blocks/features.scss
+++ b/src/styles/blocks/features.scss
@@ -26,6 +26,8 @@
     letter-spacing: 0.13em;
     color: $c-turquoise;
 
+    overflow: hidden;
+
     @include onTablet {
       margin-bottom: 50px;
     }
