--- a/src/styles/blocks/materials.scss
+++ b/src/styles/blocks/materials.scss
@@ -1,23 +1,12 @@
 .materials {
 
-  @include onDesktop {
-    display: grid;
-    grid-template-columns: repeat(6, 1fr);
-    column-gap: 20px;
-  }
-
-  @include onTablet {
-    display: grid;
-    grid-template-columns: repeat(6, 1fr);
-    column-gap: 20px;
-  }
-
   &__title {
     position: relative;
 
     display: inline-block;
     margin-bottom: 120px;
     padding-left: 30px;
+    padding-right: 30px;
 
     z-index: 1;
 
@@ -30,13 +19,18 @@
     color: $c-turquoise;
 
     @include onDesktop {
+      position: absolute;
+      top: -15%;
+
+      padding-left: 135px;
+
       font-size: 139px;
       line-height: 167px;
       letter-spacing: 0.12em;
     }
 
     @include onTablet {
-      grid-column: 1 / 6;
+      position: relative;
 
       margin-bottom: 27px;
       padding-left: 34px;
@@ -65,26 +59,39 @@
     background-size: cover;
 
     @include onDesktop {
-      min-height: 1080px;
+      position: static;
+
+      min-height: 1020px;
     }
 
     @include onTablet {
-      grid-column: 1 / 7;
+      position: static;
 
       min-height: 576px;
     }
   }
 
-/* feature */
+  /* feature */
   &__feature {
     display: block;
 
     max-width: 340px;
     padding-right: 34px;
 
-    position: absolute;
-    top: 15%;
-    right: 0;
+    @include onDesktop {
+      position: absolute;
+      top: 0;
+      right: 0;
+
+      max-width: 470px;
+      padding-right: 135px;
+
+    }
+    @include onTablet {
+      position: absolute;
+      top: 18%;
+      right: 0;
+    }
 
     @include onMobile {
       display: none;
@@ -106,6 +113,8 @@
   &__feature-info {
     display: inline-block;
 
+    height: 144px;
+
     font-family: "Manrope", serif;
     font-style: normal;
     font-weight: 400;
@@ -114,12 +123,16 @@
     color: #4f4f4f;
   }
 
-/* list */
+  /* list */
   &__list {
     display: none;
     z-index: 1;
 
     list-style: none;
+
+    @include onDesktop {
+      display: block;
+    }
 
     @include onTablet {
       display: block;
@@ -150,38 +163,56 @@
     position: absolute;
 
     &:first-child {
-      bottom: 24%;
+      bottom: 13%;
       left: 11%;
     }
 
     &:nth-child(2) {
-      bottom: 38%;
+      bottom: 28%;
       left: 30%;
     }
 
     &:nth-child(3) {
-      bottom: 20%;
+      bottom: 9%;
       left: 45%;
     }
 
     &:nth-child(4) {
-      bottom: 28%;
+      bottom: 17%;
       left: 54%;
     }
 
     &:last-child {
-      bottom: 48%;
+      bottom: 39%;
       left: 72%;
     }
-  }
-/* slider */
-  &__slider {
-    display: none;
 
-    @include onMobile {
-      display: block;
+    @include onDesktop {
 
-      padding: 0 9px;
+      &:first-child {
+        bottom: 13%;
+        left: 18%;
+      }
+
+      &:nth-child(2) {
+        bottom: 35%;
+        left: 38%;
+      }
+
+      &:nth-child(3) {
+        bottom: 9%;
+        left: 47%;
+      }
+
+      &:nth-child(4) {
+        bottom: 25%;
+        left: 58%;
+      }
+
+      &:last-child {
+        bottom: 34%;
+        left: 77%;
+      }
     }
   }
 }
