--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -40,5 +40,11 @@
         margin-bottom: 192px;
       }
     }
+
+    &--team {
+      @include onDesktop {
+        margin-bottom: 80px;
+      }
+    }
   }
 }
