--- a/src/styles/blocks/swiper.scss
+++ b/src/styles/blocks/swiper.scss
@@ -1,11 +1,21 @@
 .swiper {
+  overflow: hidden;
+  
   width: 100%;
   height: 254px;
 
   background: rgba(0, 0, 0, 0.45);
   mix-blend-mode: normal;
-  box-shadow: 0px 3px 2px rgba(0, 0, 0, 0.15);
+  box-shadow: 0 3px 2px rgba(0, 0, 0, 0.15);
   backdrop-filter: blur(34px);
+
+  display: none;
+
+  @include onMobile {
+    display: block;
+
+    padding: 0 9px;
+  }
 }
 
 .swiper-slide {
@@ -18,27 +28,26 @@
   margin-bottom: 30px;
 }
 
-.swiper-pagination .swiper-pagination-bullets .swiper-pagination-horizontal > .swiper-pagination-bullet-active {
-  background: rgba(0, 0, 0, 0.3);
+.swiper-pagination-bullet {
+  border-radius: 0 !important;
+  height: 7px !important;
+  width: 7px !important;
+
+  border: 1px solid #f8f8f8 !important;
+  background: #f8f8f8 !important;
+
+  transform: rotate(-45deg) !important;
 }
 
-.swiper-pagination-horizontal > .swiper-pagination-bullet {
-  border-radius: 0;
-  height: 7px;
-  width: 7px;
-
-  border-color: 1px solid #f8f8f8;
-  background: #F8F8F8;
-
-  transform: rotate(-45deg);
+.swiper-pagination-horizontal > .swiper-pagination-bullet-active {
+  background: rgba(0, 0, 0, 0.3) !important;
 }
-
 
 .swiper-content {
   margin-bottom: 38px;
   width: 213px;
 
-  font-family: 'Manrope', serif;
+  font-family: "Manrope", serif;
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
@@ -46,4 +55,3 @@
 
   color: #f8f8f8;
 }
-
